Aufgabe 1 Doku erstellt in der README.md